Bug 38215 - vertical paragraph borders have white dividers
Summary: vertical paragraph borders have white dividers
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Panos Stokas
URL:
Whiteboard: target:3.6.0 target:3.5.4
Keywords: regression
Depends on:
Blocks: 44768
  Show dependency treegraph
 
Reported: 2011-06-12 09:10 UTC by Panos Stokas
Modified: 2023-01-13 06:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Vertical paragraph borders have white dividers (38.62 KB, application/rar)
2011-06-12 09:10 UTC, Panos Stokas
Details
Irregular, black paragraph border (7.07 KB, image/png)
2011-07-25 22:27 UTC, Grzegorz Grzybek
Details
Faint dashes on the border under high zoom (8.95 KB, image/png)
2011-11-18 08:12 UTC, Panos Stokas
Details
Irregular vertical borders (12.57 KB, application/vnd.oasis.opendocument.text)
2012-01-05 07:48 UTC, Panos Stokas
Details
border around paragraph - ugly! (36.15 KB, image/jpeg)
2012-01-18 02:16 UTC, Grzegorz Grzybek
Details
ODT file with white dividers in paragraph border (86.75 KB, application/vnd.oasis.opendocument.text)
2012-01-19 02:01 UTC, Grzegorz Grzybek
Details
PDF file with white dividers in paragraph border (148.35 KB, application/pdf)
2012-01-19 02:02 UTC, Grzegorz Grzybek
Details
The vertical dashing border problem is less obvious when an alternative method is used to produce a PDF from a document. (668.03 KB, application/pdf)
2012-01-19 03:55 UTC, Panos Stokas
Details
Diagonal gap in paragraph borders (23.85 KB, image/jpeg)
2012-04-17 07:18 UTC, Panos Stokas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Panos Stokas 2011-06-12 09:10:37 UTC
Created attachment 47871 [details]
Vertical paragraph borders have white dividers

Create a paragraph with 2 or more lines and format it with a border. The vertical lines of the border (as well the diagonal dividers) will have small white dividers every line of the paragraph. There is one divider for each line (so, they depend on font size, line height etc)

The problem is not merely a cosmetic: it also affects printing as the attached PDF file shows.

I am attaching a zip archive with three files, an ODT a PNG and a PDF.

This doesn't affect LibreOffice 3.3
Comment 1 Rainer Bielefeld Retired 2011-06-13 00:30:33 UTC
[Reproducible] with "LibreOffice 3.4.0  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:12)]". Seems to be more or less a rendering problem, reporter's and my own sample document do not show the dividers when opened with OOo 3.1.1.

The lines appear between text lines separated by <CR> (new paragraph) and in the 4 corners , in printout the corners of the border look very ugly.

Cédric:
Please feel free to reassign if it’s not your area.
Comment 2 Panos Stokas 2011-06-21 21:38:05 UTC
The bug is present in version 3.4.1 RC1
Comment 3 Rainer Bielefeld Retired 2011-06-21 22:25:23 UTC
<http://wiki.documentfoundation.org/BugReport_Details#Version>
Comment 4 Panos Stokas 2011-06-22 01:25:17 UTC
(In reply to comment #3)
> <http://wiki.documentfoundation.org/BugReport_Details#Version>

Thanks, the earliest version is 3.4.0
Comment 5 Grzegorz Grzybek 2011-07-25 22:27:08 UTC
Created attachment 49550 [details]
Irregular, black paragraph border

The borders sometimes have white dividers, but always are ugly as if written by several "strokes". Here's an example of thicker black dividers.
Comment 6 Grzegorz Grzybek 2011-10-18 04:16:10 UTC
What's the status of this issue? For me it's actual blocker which doesn't allow me use LibreOffice in my company :(
Comment 7 Panos Stokas 2011-10-30 23:12:28 UTC
(In reply to comment #6)
> What's the status of this issue? For me it's actual blocker which doesn't allow
> me use LibreOffice in my company :(

Unfortunately it had not been fixed in the latest nightly I had tested a 3-4 weeks ago, but keep in mind that it does not seem to affect printing. At least not in my case.
Comment 8 Panos Stokas 2011-11-18 08:12:37 UTC
Created attachment 53663 [details]
Faint dashes on the border under high zoom
Comment 9 Panos Stokas 2011-11-18 08:13:04 UTC
The bug is fixed in 3.4.4

A very faint diagonal line still appears at the left bottom corner but it's difficult to discern even under high zoom. I am attaching a screen shot.

I suggest that the bug status is changed to resolved and if anyone has a problem with the cosmetic issue above may reopen it.
Comment 10 Grzegorz Grzybek 2011-11-20 23:42:21 UTC
In LibreOffice 3.4.4 all seems fine. However the white dividers are still present after PDF export :(
Comment 11 Panos Stokas 2012-01-05 07:48:57 UTC
Created attachment 55171 [details]
Irregular vertical borders

Gregor is right, the problem still exists. I am attaching a final sample of the bug; it contains both the document and a screenshot of the issue.
Comment 12 Grzegorz Grzybek 2012-01-18 02:16:26 UTC
Created attachment 55724 [details]
border around paragraph - ugly!

Problem still exists in 3.4.5...
Comment 13 Grzegorz Grzybek 2012-01-18 02:17:25 UTC
These borders are also messed up in PDF export...
Comment 14 Panos Stokas 2012-01-19 00:50:03 UTC
(In reply to comment #13)
> These borders are also messed up in PDF export...

Could you post the opendocument as well ? I'd like to see if the problem persists on my eDocPDF printer as well.
Comment 15 Grzegorz Grzybek 2012-01-19 02:01:39 UTC
Created attachment 55766 [details]
ODT file with white dividers in paragraph border

See page 2
Comment 16 Grzegorz Grzybek 2012-01-19 02:02:09 UTC
Created attachment 55767 [details]
PDF file with white dividers in paragraph border

See page 4
Comment 17 Panos Stokas 2012-01-19 03:55:01 UTC
Created attachment 55772 [details]
The vertical dashing border problem is less obvious when an alternative method is used to produce a PDF from a document.


(In reply to comment #15)
> Created attachment 55766 [details]
> ODT file with white dividers in paragraph border
> 
> See page 2

OK, I have printed your document using the eDocPDF printer software (which I've been using for many years) and I can only see one dash in the bottom of the left vertical border, even under extremely high zoom.

That confirms my suspicions that the issue is not only on the screen renderer but on the build-in PDF exporter as well.
Comment 18 Michael Stahl 2012-03-24 13:18:00 UTC
looks like another regression from 0f0896c26fb260d1bbf31d7a886df3f61837f0f2, the gift that keeps on giving...

because the borders are now drawn differently,
SwLineRects::ConnectEdges is no longer used on them,
which looks like it would remove these gaps.
Comment 19 Not Assigned 2012-04-16 07:19:12 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0868a0155a2b57daf7b862d120aead0458372b17

fdo#38215: merge consecutive border lines:
Comment 20 Not Assigned 2012-04-16 07:42:45 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=44092833d3a0f0d6074c64bd0e64bbdf11109afe

fdo#38215: forgot idiotic C++ syntax (fix 0868a0155a)
Comment 21 Michael Stahl 2012-04-16 08:36:00 UTC
hopefully fixed now on master, by merging consecutive border lines again.
Comment 22 Panos Stokas 2012-04-17 07:18:54 UTC
Created attachment 60169 [details]
Diagonal gap in paragraph borders

There is still a problem with the border angles as my attachment shows; a diagonal gap between the vertical and horizontal borders.

This happens in the latest master (2012-04-16_22.13.56)

However the vertical dashes have been fixed. Thanks.
Comment 23 Michael Stahl 2012-04-17 08:24:12 UTC
Panos, the diagonal gaps in the corners are already tracked
in bug 38635, this one here is just about the gaps between
consecutive borders.
Comment 24 Panos Stokas 2012-04-17 08:44:47 UTC
Apologies and thanks for taking care of the bug!
Comment 25 Not Assigned 2012-04-20 06:21:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e435a78af84f04e1ea8907c70447a87841aa1186&g=libreoffice-3-5

fdo#38215: merge consecutive border lines:


It will be available in LibreOffice 3.5.4.
Comment 26 Grzegorz Grzybek 2012-05-31 00:01:22 UTC
Thanks - it finally works in 3.5.4!!!
Comment 27 Grzegorz Grzybek 2012-05-31 00:02:08 UTC
It works!